# Hackathon2023

./: .gitignore  README.md  docker-compose.yml  package.json  pyproject.toml
backend/: Dockerfile  app.py  pyproject.toml
backend-rust/: Cargo.toml
backend-rust/migrations/2023-12-20-131535_create_tables/: down.sql  up.sql
backend-rust/src/: main.rs  schema.rs
backend-rust/src/api/: appointments.rs  buildings.rs  events.rs  mod.rs  organisations.rs  rooms.rs
backend-rust/src/models/: appointment.rs  building.rs  coordinates.rs  event.rs  event_type.rs  mod.rs  organisation.rs  room.rs
backend/.chalice/: config.json
backend/api/: Responses.py  api_appointments.py  api_buildings.py  api_events.py  api_organisations.py  api_organizations.py  api_rooms.py  api_swaggerui.py  constants.py
backend/db/: appointment_db.py  building_db.py  event_db.py  organisation_db.py  organization_db.py  room_db.py
backend/models/: models.py
backend/sql/: postgres_init.sql
backend/swaggerui/: openapi.yaml  swagger-ui-bundle.js  swagger-ui.css  swagger-ui.html
backend/util/: mock_data.py  util.py
frontend/: .env.example  bun.lockb  next.config.js  package-lock.json  package.json
frontend/src/app/: calendar.tsx  create-edit-event-dialog.tsx  layout.tsx  page.tsx
frontend/src/app/organisations/: page.tsx
frontend/src/app/organisations/[organisationId]/: page.tsx
frontend/src/app/organisations/[organisationId]/buildings/: page.tsx
frontend/src/app/organisations/[organisationId]/buildings/[buildingId]/: building-stats.tsx  page.tsx  rooms-list.tsx
frontend/src/app/organisations/[organisationId]/buildings/[buildingId]/rooms/: building-stats.tsx  page.tsx  rooms-list.tsx  tempChart.tsx  tempGauge.tsx
frontend/src/app/organisations/[organisationId]/buildings/[buildingId]/rooms/[roomId]/: calendar.tsx  create-edit-event-dialog.tsx  page.tsx
frontend/src/app/organisations/[organisationId]/buildings/[buildingId]/rooms/[roomId]/calendar/: calendar.tsx  (+1 more)
frontend/src/components/: map.tsx
frontend/src/components/event-log/: event-log-item.tsx  event-log-room.tsx  event-log.tsx
frontend/src/components/markers/: building-marker.tsx  organisation-marker.tsx
frontend/src/hooks/: use-fetch.ts
frontend/utils/: theme.ts
(+2 files in other folders)
