[package]
name = "backend-rust"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
axum = "0.7.2"
chrono = { version = "0.4.31", features = ["serde"]  }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
diesel = { version = "2.1.4", features = ["postgres", "uuid", "serde_json", "numeric", "chrono"]}
diesel-async = { version = "0.4.1", features = ["postgres", "bb8", "deadpool", "mobc"] }
lambda_http = { git = "https://github.com/awslabs/aws-lambda-rust-runtime", branch = "main" }
lambda_runtime = "0.8.3"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108", features = [] }
bytes = "1.5.0"
bigdecimal = { version = "0.4.2",  features = ["serde"]  }
time = { version = "0.3.31", features = ["serde"]  }

