[tool.poetry]
name = "dashboard_backend"
version = "0.1.0"
description = "Dashboard Backend"
authors = []

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
