[tool.poetry]
name = "dashboard_backend"
version = "0.1.0"
description = "Dashboard Backend"
authors = []

[tool.poetry.dependencies]
python = "^3.11"
chalice = "^1.29.0"
boto3 = "^1.28.73"
pydantic = "^2.4.2"
psycopg2-binary = "^2.9.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
